created PUT and DELETE routes for flashcard collections
