# api-gateway/routes/Collections.js
@@ -2,7 +2,7 @@ const express = require("express");
 const router = express.Router();
 const axios = require('axios');
 const addresses = require("../misc/api_addresses");
-const {standardGetRouteActions, standardPostRouteActions} = require("../misc/standard_route_actions");
+const {standardGetRouteActions, standardPostRouteActions, standardPutRouteActions, standardDeleteRouteActions} = require("../misc/standard_route_actions");
 const middleware = require("../middleware.js");
 
 
@@ -27,6 +27,9 @@ const middleware = require("../middleware.js");
     await standardPostRouteActions(addresses["rest-api-server"], "flashcard_collections", payload, req, res);
 });
 
+
+
+
  router.post("/flashcard_collections/createWithArray", middleware.authorize,async (req, res) => {
     // deconstructing the request body
 
@@ -39,6 +42,35 @@ const middleware = require("../middleware.js");
         description: req.body.description
     }
     await standardPostRouteActions(addresses["rest-api-server"], "flashcard_collections/createWithArray", payload, req, res);
+});
+
+
+
+ // documentation available at <base_url>/api/api-docs/
+ router.put("/flashcard_collections/:collectionId", middleware.authorize,async (req, res) => {
+    // deconstructing the request body
+
+    const payload = {
+        user_id: req.authorization_details.user_id,
+        title: req.body.title,
+        public: req.body.public,
+        flashcards: req.body.flashcards,
+        description: req.body.description
+    }
+    await standardPutRouteActions(addresses["rest-api-server"], `flashcard_collections/${req.params.collectionId}`, payload, req, res);
+});
+
+ // documentation available at <base_url>/api/api-docs/
+ router.delete("/flashcard_collections/:collectionId", middleware.authorize, async (req, res) => {
+    // deconstructing the request body
+
+    let config = {
+        headers: {
+            "user_id": req.authorization_details.user_id,
+        }
+    }
+    // console.log(user_id)
+    await standardDeleteRouteActions(addresses["rest-api-server"], `flashcard_collections/${req.params.collectionId}`, config, req, res);
 });
 
 
